fixed requirements.txt for django-unfold version type v4

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,7 @@ jobs:
           port: '22'
           script: |
             set -e
-            cd /home/${{ secrets.SERVER_USER }}/ustudy_unicraft/backend
+            cd /home/${{ secrets.SERVER_USER }}/unicraft/
 
             # Stash local changes if any
             if ! git diff-index --quiet HEAD --; then
@@ -35,8 +35,8 @@ jobs:
             fi
 
             # Pull latest main
-            git fetch origin dev
-            git reset --hard origin/dev
+            git fetch origin main
+            git reset --hard origin/main
 
             docker compose down --remove-orphans
             docker images --format "{{.Repository}} {{.ID}}" | grep 'ustudy_unicraft' | awk '{print $2}' | xargs -r sudo docker rmi
